fixed overflow of form-section

--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,7 @@ body {
   display: flex;
   justify-content: flex-end;
   position: relative;
+  overflow-x: hidden
 }
 .form-section__main {
   border-top-left-radius: 20px;
